# ZKong-Demo

./: .gitignore  CONTRIBUTING_BACK_TO_FRIEND.md  ENV_TEMPLATE.md  NCR_TESTING_GUIDE.md  PRODUCTION_MIGRATION_GUIDE.md  Procfile  README.md  README_CALENDAR_UI.md  SETUP_GUIDE.md  SETUP_YOUR_OWN_REPO.md  SHOPIFY_WEBHOOK_SETUP.md  SLACK_ERROR_NOTIFICATIONS_IMPLEMENTATION.md  SQUARE_INTEGRATION_PLAN.md  SQUARE_ONBOARDING_SYNC_GUIDE.md  SQUARE_TOKEN_REFRESH_IMPLEMENTATION.md  SQUARE_WEIGHT_PRICING_IMPLEMENTATION.md  TESTING_WITH_SHOPIFY.md  TIME_BASED_PRICING.md  USER_FLOW.md  bsp-items-catalog-v2_swagger.json  package-lock.json  pyproject.toml  readme copy.md  requirements-dev.txt  requirements.txt
app/: config.py  main.py
dashboard/: package.json
docs/: CLOVER_CROSS_PROCESS_REFRESH_FIX.md  CLOVER_INTEGRATION_PHASE1_IMPLEMENTATION.md  CLOVER_OAUTH_ONBOARDING_IMPLEMENTATION.md  CLOVER_POLLING_SYNC_PLAN.md  CLOVER_REFRESH_TOKEN_RACE_CONDITION_FIX.md  CLOVER_TIME_BASED_SCHEDULER_IMPLEMENTATION.md  CLOVER_TOKEN_REFRESH_PLAN.md  NCR_INTEGRATION_AND_USER_FLOWS.md  SHOPIFY_INTEGRATION_AND_USER_FLOWS.md  Square_Production_Security_And_Onboarding_Guide.md  TBP_2FA_IMPLEMENTATION_GUIDE.md
external-tool/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1769283392567-9aece5c9a879f.mjs
frontend/: RAILWAY_DEPLOY.md  README.md  next.config.js  nixpacks.toml  package-lock.json  package.json
migrations/: README.md
scripts/: __init__.py  run_sync_once.py
shopify-app/: .eslintrc.cjs  Procfile  README.md  index.html  package.json  (+6 more)
(+110 files in other folders)
